# polan-annotator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PHASE6_DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: annotators_config.json  audio_classification.txt
deploy/: RUNBOOK_GO_LIVE.md  litestream.yml
docs/: ADMIN_GUIDE.md  AMBER_HANDBOOK.md  ARCHITECTURE.md  COSTS.md  DANGER_ZONE.md  TROUBLESHOOTING.md  USER_GUIDE.md
exports/: .gitignore
install/: Amber 安裝指引.docx  install_amber_polan.sh  make_amber_doc.py
scripts/: full_export.sh  install_desktop_shortcut.sh  migrate_add_gold_lock_fields.py  migrate_from_amber.sh  migrate_loop_capability_to_multi.py  migrate_source_type_to_multi.py  regen_audio_classification.py  rescan_audio.py  seed_fixture.py  start_annotator.command  validate_export.py  warm_audio_cache.py
src/: agreement.py  alignment_compare.py  alignment_db.py  alignment_publish.py  annotation_serialization.py  annotator_access.py  annotators_loader.py  arbitration.py  audience_credibility.py  audio_analysis.py  audio_scanner.py  audiofile_status.py  auth.py  auto_promote.py  calibration_feedback.py  cf_jwt.py  client_auth.py  config.py  constants.py  db.py  dimensions_config.json  dimensions_loader.py  export.py  export_editions.py  main.py  middleware.py  migrations.py  models.py  quality_flags.py  role_calibration.py  role_gaps.py  statistics.py  stats.py  thresholds.py
static/: alignment-compare.html  alignment-compare.js  alignment.html  alignment.js  annotate.html  annotate.js  annotator-detail.html  annotator-detail.js  auth.js  calibration-compare.html  (+21 more)
(+86 files in other folders)
